crates/horns-ratatui/src/snapshots/horns_ratatui__render__tests__renders_banner_error.snap
---
source: crates/horns-ratatui/src/render.rs
expression: out
---
┌────────────────────────────┐
│something failed            │
└────────────────────────────┘
