crates/horns-ratatui/src/snapshots/horns_ratatui__render__tests__renders_banner_info.snap
---
source: crates/horns-ratatui/src/render.rs
expression: out
---
┌────────────────────────────┐
│saved                       │
└────────────────────────────┘
