crates/horns-ratatui/src/snapshots/horns_ratatui__render__tests__renders_form_with_focused_field.snap
---
source: crates/horns-ratatui/src/render.rs
expression: out
---
┌provider──────────────────────────────────────────────────┐
│endpoint: https://api.example.com  HTTPS URL              │
│api_key: ••••••  required                                 │
│                                                          │
└──────────────────────────────────────────────────────────┘
