crates/horns-ratatui/src/snapshots/horns_ratatui__render__tests__renders_list_with_title_and_selection.snap
---
source: crates/horns-ratatui/src/render.rs
expression: out
---
┌accounts────────────────────┐
│personal [default]          │
│  anthropic                 │
│work                        │
│  openai                    │
└────────────────────────────┘
