crates/horns-ratatui/src/snapshots/horns_ratatui__render__tests__renders_modal_centered_over_background.snap
---
source: crates/horns-ratatui/src/render.rs
expression: out
---
status
┌items─────────────────────────────────┐
│alpha                                 │
│       ┌edit──────────────────┐       │
│       │name: personal        │       │
│       │                      │       │
│       │                      │       │
│       │                      │       │
│       └──────────────────────┘       │
│                                      │
│                                      │
└──────────────────────────────────────┘
