crates/horns-ratatui/src/snapshots/horns_ratatui__render__tests__renders_status_block_with_scroll_offset.snap
---
source: crates/horns-ratatui/src/render.rs
expression: out
---
┌log───────────────┐
│line 3            │
│line 4            │
│line 5            │
└──────────────────┘
